src/objects/Clinical_Catalog_Tree_Node__c.object
<CustomObject>
    <fields>
        <fullName>Catalog_Element__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog Element</label>
        <referenceTo>Clinical_Catalog_Element__c</referenceTo>
        <relationshipName>Clinical_Catalog_Trees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog</label>
        <referenceTo>Clinical_Catalog__c</referenceTo>
        <relationshipName>Clinical_Catalog_Trees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eley_Type__c</fullName>
        <formula>TEXT(Catalog_Element__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eley Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Action__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ID_Action</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID_Goal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ID_Goal</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID_Objective__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ID_Objective</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Oder__c</fullName>
        <formula>TEXT(ID_Goal__c)  &amp; IF( ID_Objective__c =0,&apos;0000&apos;,TEXT(ID_Objective__c)) &amp; IF( ID_Action__c =0,&apos;0000&apos;,TEXT(ID_Action__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Oder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Clinical Catalog Tree Node</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Catalog__c</columns>
        <columns>Catalog_Element__c</columns>
        <columns>Eley_Type__c</columns>
        <columns>ID_Goal__c</columns>
        <columns>ID_Objective__c</columns>
        <columns>ID_Action__c</columns>
        <columns>Sort_Oder__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Catalog Tree Nodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>